# ticktack

./: README.md
ticktack-core/: CMakeLists.txt  Readme.md
ticktack-core/include/: Counter.h  TickTackStore.h
ticktack-core/src/: Counter.cpp  Counter.h  TickTackStore.cpp  TickTackStore.h
ticktack-core/tests/: Counter_unittest.cpp  TickTackStore_unittest.cpp
ticktack-java/: README.md  build.gradle
ticktack-java/examples/ButtonCounter/: build.gradle  settings.gradle
ticktack-java/examples/ButtonCounter/app/: build.gradle
ticktack-java/examples/ButtonCounter/app/src/androidTest/java/com/ticktack/buttoncounter/: ExampleInstrumentedTest.kt
ticktack-java/examples/ButtonCounter/app/src/main/: AndroidManifest.xml
ticktack-java/examples/ButtonCounter/app/src/main/java/com/ticktack/buttoncounter/: CounterViewModel.kt  MainActivity.kt
ticktack-java/examples/ButtonCounter/app/src/main/res/layout/: activity_main.xml
ticktack-java/examples/ButtonCounter/app/src/main/res/values/: strings.xml
ticktack-java/examples/ButtonCounter/app/src/test/java/com/ticktack/buttoncounter/: ExampleUnitTest.kt
ticktack-java/examples/ButtonCounter/gradle/wrapper/: gradle-wrapper.properties
ticktack-java/ticktack/: .gitignore  settings.gradle
ticktack-java/ticktack/ticktack-library/: build.gradle  local.properties
ticktack-java/ticktack/ticktack-library/src/androidTest/java/com/ticktack/core/: IntegrationTest.kt
ticktack-java/ticktack/ticktack-library/src/cpp/: CMakeLists.txt  ticktack-jni.cpp  ticktack-jni.h
ticktack-java/ticktack/ticktack-library/src/main/: AndroidManifest.xml
ticktack-java/ticktack/ticktack-library/src/main/java/com/ticktack/core/: Counter.kt  TickTackStore.kt  TickTackStoreConfiguration.kt
